--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@nestgram/mongo",
   "description": "Mongoose module for Nestgram framework",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "author": "Degreet <degreetpro@gmail.com>",
   "private": false,
+  "homepage": "https://github.com/Degreet/nestgram-mongo.git",
   "repository": {
     "type": "git",
     "url": "https://github.com/Degreet/nestgram-mongo.git"
